Lab8 (#60)
* Gui init (#50)

* Java 21; javafx setup

* sync package

* Added gui: login, register, table

* Dockerfile set to java 21

* Changed gui packages; Show gui app

* Localization (#51)

* Test bundle

* i18n helper

* i18n full intergration

* Locale combobox

* Selector, swedish and spanish languages

* todo

* Logic integration (#54)

* imports fixed

* login & registration

* default name changed

* Observable collection

* Same width;

* tablepane handle changes

* ids

* edit and delete buttons

* Base dialog

* 2 dialogs

* Update

* Create

* Hotfix

* Confirmation for delete

* Header pane and logout

* Sorting

* Animations

* Edit and delete button icons

* Create button styled

* Fix message to map

* bug with login error fixed

* dialog size fix

* Map (#55)

* map

* todos

* Map: basic

* Mydialog title center

* Map: drag, zoom

* Switch button works properly; Styling of map

* Switch button translation

* Animations (#56)

* Fix: dialog apperaing on another desktop

* Russian language

* Permissions (#57)

* server ownership logic

* Messages are now observable

* Changed login result - now returns token and userId

* Permission exchange

* Alert

* Different user colors

* Permissions work!

* Grant/revoke access

* Clear all command

* Execute script

* Synclabel

* errors (#58)

* Full translation (#59)

* translations

* defence